--- a/muscle-pro/package.json
+++ b/muscle-pro/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^4.4.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "reactstrap": "^8.2.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
